# dam

./: .env.example  .gitignore  AGENTS.md  README.md  apply_bigint_change.py  check_sqlalchemy.py  conftest.py  create_dummy_image.py  dam.toml  dummy_asset.txt  get_signature.py  pyproject.toml  run_task_in_pkgs_if_exist.py  shared_tasks.toml  test_world_config.json  worlds_config.json
.github/workflows/: ci.yml  format_and_fix.yml
alembic/: env.py
alembic/versions/: 3e7c6290c313_manual_create_initial_schema.py  7a61d5240f08_create_initial_schema.py  7a61d5240f08_initial_schema_kw_only_from_base.py  b66de9bf8963_rename_component_tables.py
dam/: __init__.py  cli.py  gradio_ui.py
dam/core/: __init__.py  components_markers.py  config.py  database.py  events.py  exceptions.py  global_resources.py  logging_config.py  model_manager.py  resources.py  stages.py  system_params.py  systems.py  world.py  world_registrar.py  world_setup.py
dam/examples/: ingest_from_gallery_dl.py
dam/models/: __init__.py  audio_properties_component.py  base_class.py  base_component.py  content_hash_component.py  content_hash_md5_component.py  content_hash_sha256_component.py  entity.py  file_location_component.py  file_properties_component.py  frame_properties_component.py  image_perceptual_hash_ahash_component.py  image_perceptual_hash_component.py  image_perceptual_hash_dhash_component.py  image_perceptual_hash_phash_component.py  original_source_info_component.py  types.py  web_source_component.py  website_profile_component.py
dam/models/conceptual/: __init__.py  base_conceptual_info_component.py  base_variant_info_component.py  character_concept_component.py  comic_book_variant_component.py  entity_character_link_component.py  entity_tag_link_component.py  evaluation_result_component.py  evaluation_run_component.py  page_link.py  tag_concept_component.py  transcode_profile_component.py  transcoded_variant_component.py
dam/models/core/: __init__.py  base_component.py  entity.py  file_location_component.py  types.py
dam/models/hashes/: __init__.py  content_hash_md5_component.py  content_hash_sha256_component.py  image_perceptual_hash_ahash_component.py  image_perceptual_hash_dhash_component.py  image_perceptual_hash_phash_component.py
dam/models/metadata/: exiftool_metadata_component.py
dam/models/properties/: __init__.py  audio_properties_component.py  file_properties_component.py  frame_properties_component.py  image_dimensions_component.py
dam/models/semantic/: __init__.py  audio_embedding_component.py  text_embedding_component.py
dam/models/source_info/: __init__.py  original_source_info_component.py  web_source_component.py  website_profile_component.py
dam/models/tags/: __init__.py  entity_tag_link_component.py  model_generated_tag_link_component.py
dam/services/: __init__.py  asset_service.py  audio_service.py  character_service.py  comic_book_service.py  ecs_service.py  file_operations.py  file_storage.py  file_storage_service.py  metadata_extractor.py  semantic_service.py  tag_service.py  tagging_service.py  transcode_service.py  world_service.py
dam/systems/: __init__.py  asset_ingestion_systems.py  asset_lifecycle_systems.py  audio_systems.py  auto_tagging_system.py  evaluation_systems.py  metadata_systems.py  semantic_systems.py
dam/ui/: __init__.py  main_window.py
dam/ui/dialogs/: __init__.py  add_asset_dialog.py  character_management_dialog.py  component_viewerd_dialog.py  component_viewerd_ialog.py  evaluation_result_dialog.py  evaluation_setup_dialog.py  find_asset_by_hash_dialog.py  find_similar_images_dialog.py  semantic_search_dialog.py  transcode_asset_dialog.py  world_operations_dialogs.py
dam/utils/: __init__.py  async_typer.py  media_utils.py  model_utils.py
doc/: design_specification.md  developer_guide.md
docs/: design_specification.md  developer_guide.md
temp/dam_transcodes/: a5f4595e9ae3678b25809ff15ccdebe22c61bbf9f6ca2e607f087d05a90e4305_apply_test_profile_service_1f221752.mock  fbdadd8b8071415020676d4978b0ef019a36334b4e73c133be6a88bcefd87367_apply_test_profile_cli_a2bc0ce9.cli_mock
tests/: __init__.py  conftest.py  test_character_service.py  test_cli.py  test_cli_character.py  test_cli_search.py  test_cli_transcoding_evaluation.py  test_comic_book_service.py  test_evaluation.py  test_evaluation_systems.py  test_exiftool_metadata.py  test_gradio_ui.py  test_semantic_service.py  test_tag_service.py  test_transcode_service.py  test_transcoding.py  test_ui_features.py
tests/models/: test_audio_properties_component.py  test_content_hash_component.py  test_content_hash_md5_component.py  test_content_hash_sha256_component.py  test_entity.py  test_frame_properties_component.py  test_hash_components.py  test_image_dimensions_component.py  test_image_perceptual_ahash_component.py  test_image_perceptual_dhash_component.py  test_image_perceptual_hash_component.py  test_image_perceptual_phash_component.py  test_website_components.py
tests/services/: test_asset_service.py  test_ecs_service.py  test_file_operations.py  test_file_storage.py  test_world_service.py  test_world_service_advanced.py
tests/systems/: test_asset_lifecycle_systems.py
