[project]
name = "ecs_dam_system"
version = "0.1.0"
description = "A Digital Asset Management system using an Entity-Component-System (ECS) architecture in Python."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "AI Agent", email = "ai.agent@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Multimedia :: Graphics :: Media Management",
]

dependencies = [
    "sqlalchemy",
    "alembic",
    "typer",
    "python-dotenv",
    "pydantic",
    "pydantic-settings", # For settings management
    "psutil", # Added for system resource detection
    # "hachoir", # Moved to optional
    # "sentence-transformers", # Moved to optional
    # "numpy", # Moved to optional
]

[project.optional-dependencies]
image = [
    "ImageHash",
    "Pillow"
]
video = [
    # "ffmpeg-python" # Using subprocess for now
]
audio = [
    # "mutagen",
]
metadata = [ # New group for metadata extraction
    "hachoir"
]
semantic = [ # New group for semantic search capabilities
    "sentence-transformers",
    "numpy"
]
# Transcoding tool specific dependencies (optional, as tools might be system-installed)
# These are more for tracking/documentation if direct python bindings were used.
# For now, we assume ffmpeg, cjxl, avifenc, etc., are in PATH.
transcode-ffmpeg = []
transcode-cjxl = []
transcode-avifenc = []

# Group for all transcoding related optional dependencies (if any were added above)
all-transcode = [
    # "ecs_dam_system[transcode-ffmpeg]", # Example if they had actual deps
    # "ecs_dam_system[transcode-cjxl]",
    # "ecs_dam_system[transcode-avifenc]",
]

# ui = [
#     "gradio"
# ]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "aiosqlite", # Added for async SQLite in tests
    "pytest-mock", # Added for mocking
    # "ruff",
    # "mypy"
]

# Convenience group to install all optional dependencies
all = [
    "ecs_dam_system[image]",
    "ecs_dam_system[video]",
    "ecs_dam_system[audio]",
    "ecs_dam_system[metadata]",
    "ecs_dam_system[semantic]",
    # "ecs_dam_system[ui]", # Removed Gradio UI dependency
    "ecs_dam_system[dev]",
    "ecs_dam_system[all-transcode]",
]


[project.urls]
Homepage = "https://example.com/ecs_dam_system" # Placeholder
Repository = "https://example.com/ecs_dam_system.git" # Placeholder

[project.scripts]
dam-cli = "dam.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dam*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I001", "I", "F401"] # Enable common flake8 rules and isort
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto" # Try auto mode for pytest-asyncio
log_cli = false
log_cli_level = "WARNING"
log_level = "WARNING" # Overall log level for pytest
log_format = "%(asctime)s %(levelname)s %(name)s:%(lineno)d - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "ui: marks tests as ui tests to run headlessly or skip.",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
packages = ["dam"]
